--- a/interact-hub-client/src/app/login-component/login-component.component.html
+++ b/interact-hub-client/src/app/login-component/login-component.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="input" *ngIf="!isLoginRoute()">
               <i class="fa-solid fa-user"></i>
-              <input type="text" placeholder="Profession" formControlName="course" />
+              <input type="text" placeholder="Profession" formControlName="profession" />
             </div>
            
             <div class="input">
