--- a/interact-hub-client/src/app/front-page/front-page.component.html
+++ b/interact-hub-client/src/app/front-page/front-page.component.html
@@ -2,7 +2,7 @@
    
     <div class="content-wrapper">
       <div class="left-sidebar">
-       
+       <app-profile-card></app-profile-card>
       </div>
       <div class="main-content">
         <app-create-post></app-create-post>
