--- a/interact-hub-client/src/app/front-page/front-page.component.html
+++ b/interact-hub-client/src/app/front-page/front-page.component.html
@@ -1,5 +1,5 @@
 <div class="frontPage">
-   
+  <app-header style="padding:200px"></app-header>
     <div class="content-wrapper">
       <div class="left-sidebar">
        <app-profile-card></app-profile-card>
