--- a/interact-hub-client/src/app/notification-popup/notification-popup.component.html
+++ b/interact-hub-client/src/app/notification-popup/notification-popup.component.html
@@ -1,12 +1,10 @@
-
-<div class="frame">
-    <div class="card active">
-        <div class="number-bg"></div>
-        <div class="number"></div>
-        <div class="text">
-            <span class="headline">{{data.title}}</span>
-            <p>{{data.text}}<br /></p>
+<div class="container">
+    <div class="frame">
+        <div class="modal">
+            <img src="http://100dayscss.com/codepen/alert.png" width="44" height="38" />
+            <span class="title">Oh snap!</span>
+            <p>An error has occured while creating an error report.</p>
+            <div class="button">Dismiss</div>
         </div>
-        <div class="button" (click)="close()">Ok</div>
     </div>
- 
+</div>
