--- a/interact-hub-client/src/app/profile-card/profile-card.component.html
+++ b/interact-hub-client/src/app/profile-card/profile-card.component.html
@@ -1,22 +1,11 @@
 <body>
-    <div class="profile-container">
+    <div class="profile-container" *ngFor="let user of initialUsers" style="height: 300px;">
       <div class="profile-card">
         <img src="https://i.imgur.com/bZBG9PE.jpg" alt="image1" class="profile-icon" />
-        <div class="profile-name">Kelly Seikma</div>
-        <div class="profile-position">Web Designer</div>
-        <a href="#" class="button">Connect</a>
+        <div class="profile-name">{{user.username}}</div>
+        <div class="profile-position">{{user.profession}}</div>
+        <a  class="button" (click)="onFollowClick(user)">Connect</a>
       </div>
-      <div class="profile-card">
-        <img src="https://i.imgur.com/S4GNFIW.jpg" alt="image2" class="profile-icon" />
-        <div class="profile-name">Mabel Maxwell</div>
-        <div class="profile-position">Web Developer</div>
-        <a href="#" class="button">Connect</a>
-      </div>
-      <div class="profile-card">
-        <img src="https://i.imgur.com/cMSVQZC.jpg" alt="image3" class="profile-icon" />
-        <div class="profile-name">Danny Liswell</div>
-        <div class="profile-position">DevOps</div>
-        <a href="#" class="button">Connect</a>
-      </div>
+      
     </div>
   </body>
