--- a/interact-hub-client/src/app/profile-card/profile-card.component.html
+++ b/interact-hub-client/src/app/profile-card/profile-card.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="profile-container" *ngFor="let user of initialUsers" style="height: 300px;">
       <div class="profile-card">
-        <img src="https://i.imgur.com/bZBG9PE.jpg" alt="image1" class="profile-icon" />
+        <img src="https://as1.ftcdn.net/v2/jpg/01/18/01/98/1000_F_118019822_6CKXP6rXmVhDOzbXZlLqEM2ya4HhYzSV.jpg" alt="image1" class="profile-icon" />
         <div class="profile-name">{{user.username}}</div>
         <div class="profile-position">{{user.profession}}</div>
         <a  class="button" (click)="onFollowClick(user)">Connect</a>
