--- a/interact-hub-client/src/app/notification-popup/notification-popup.component.css
+++ b/interact-hub-client/src/app/notification-popup/notification-popup.component.css
@@ -17,7 +17,7 @@
 }
 
 .frame {
-  background: #444;
+  background: #fff;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, .3);
   width: 400px;
   height: 400px;
@@ -49,7 +49,7 @@
 }
 
 .button {
-  background: #F65656;
+  background: #6366f1;
   position: absolute;
   left: 0;
   right: 0;
@@ -63,7 +63,7 @@
 }
 
 .button:hover {
-  background: #f03d3d;
+  background: #6366f1;
 }
 
 .modal.toggle {
