--- a/interact-hub-client/src/app/post-view/post-view.component.html
+++ b/interact-hub-client/src/app/post-view/post-view.component.html
@@ -1,6 +1,6 @@
 <div class="tweet-wrap" *ngFor="let post of posts">
     <div class="tweet-header">
-      <img src="https://2.bp.blogspot.com/-b_lqelKRB4k/Xj-rBvoSxUI/AAAAAAAACHg/G19lzRiO6qYQmquCqut44r1cMdF53HQ0QCLcBGAsYHQ/s1600/anime3.png" alt="" class="avator">
+      <img src="https://as1.ftcdn.net/v2/jpg/01/18/01/98/1000_F_118019822_6CKXP6rXmVhDOzbXZlLqEM2ya4HhYzSV.jpg" alt="" class="avator">
       <div class="tweet-header-info">
        {{post.username}}<span></span><span></span>
         <p> {{post.content}}</p>
@@ -12,22 +12,19 @@
       <img  alt="" class="tweet-img">
     </div>
     <div class="tweet-info-counts">
+   
       
-      <div class="comments" (click)="openDialog()" >
-        
-        <svg class="feather feather-message-circle sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
-        <div class="comment-count"></div>
-      </div>
-      
-      <div class="retweets"(click)="openDialog()" (click)="onGradePostClick()">
-        <svg class="feather feather-repeat sc-dnqmqq jxshSx" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="17 1 21 5 17 9"></polyline><path d="M3 11V9a4 4 0 0 1 4-4h14"></path><polyline points="7 23 3 19 7 15"></polyline><path d="M21 13v2a4 4 0 0 1-4 4H3"></path></svg>
-        <div class="retweet-count">{{ 5 }}</div>
-        
-      </div>
-      <div class="retweets">
+
+      <div class="retweets" (click)="likePost(post)">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
         <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" />
       </svg>
-      <div class="retweet-count">{{ 5 }}</div>
+      <div class="retweet-count"></div>
+      <div class="retweets"*ngIf="post.changes">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+          <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2" fill="red" />
+        </svg>
+      </div>
+      
     </div>
       </div>
